# kicksat-sprite-rs

./: Cargo.toml  README.md  jlinkcmd.txt  memory.x
src/: main.rs
