[package]
name = "kicksat-app"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"

[dependencies]
cortex-m = "~0.5"
embedded-hal = "~0.2"
nb = "~0.1"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
panic-itm = "0.4.0"

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[dependencies.atsamd-hal]
path = "../atsamd/hal"
version = "~0.4"
default-features = false

[dependencies.kicksat]
path = "../atsamd/boards/kicksat"

[features]
# ask the HAL to enable atsamd51j19a support
default = ["rt", "atsamd-hal/samd51g19a", "atsamd-hal/samd51"]
rt = ["cortex-m-rt", "atsamd-hal/samd51g19a-rt"]
unproven = ["atsamd-hal/unproven"]

[patch.crates-io]
#atsamd-hal = {git = "https://github.com/ryankurte/atsamd", branch="board/kicksat" }

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = false

[profile.release]
debug = true
lto = false 
opt-level = "s"
